Fixed #13 Volume bar is now always visible

--- a/SpotifyWPW/WebPlayer/Style/Components/_SpotifyConnect.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_SpotifyConnect.scss
@@ -77,7 +77,7 @@
 				display: none;
 			}
 
-			.Root.is-connectBarVisible &--is-visible ~ .volume-bar{
+			&--is-visible ~ .volume-bar{
 				display: flex !important;
 			}
 		}
